@@ -3,6 +3,6 @@ package ru.yandex.practicum.filmorate.exceptions;
 public class AlreadyExistsException extends RuntimeException {
 
     public AlreadyExistsException(String objectName, Long id) {
-        super("%s с таким id(%d) уже существет!".formatted(objectName, id));
+        super(String.format("%s с таким id(%d) уже существет!", objectName, id));
     }
 }
